<resources>
    <string name="app_name">HS Info</string>

    <string name="email_empresa">hearthXstone@info.com</string>
    <string name="nombre_empresa">HS información</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_splash_screen">splash_screen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hearthstoneinfo">HearthStoneInfo</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_contacto">ContactoActivity</string>
    <string name="title_activity_acerca_de">AcercaDeActivity</string>
    <string name="title_activity_cartas">CartasActivity</string>
    <string name="title_activity_mazos">MazosActivity</string>
    <string name="title_activity_contacto_tab">ContactoTab</string>

    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="email">Email</string>
    <string name="asunto">Asunto</string>
    <string name="n_mero_de_tel_fono">Número de teléfono</string>
    <string name="mensaje">Mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="correo">Correo</string>
    <string name="sms">SMS</string>

    <string name="acerca_de1">HearthStoneInfoApp no tiene vinculación con Blizzard ni sus productos.</string>
    <string name="acerca_de2">Realizado por\nCristo y Carlos</string>

    <string name="main_texto_explicacion">Bienvenido a HearthStoneInfo APP.\n\nEste es un juego dinámico de cartas, en el cual te podrás crear tus propios mazos
        con las cientos de cartas que te ofrecen y podrás conseguir, luchar contra los demás jugadores, y derrotar a los jefes de las expansiones. Pero esta APP NO es el juego.
        \n\nAquí podrás únicamente crear tus propias cartas similares (para nada), y crear mazos con ellas y poco más,
        ya que esto es una APP para salir del paso y no es nada funcional (pero si lleva mucho código por debajo, aunque la interfaz sea tan simple).
        \n\nPara hacer una búsqueda real de las cartas, utiliza nuestro programa de escritorio multiplataforma escrito en JAVA,
        HearthStoneInfo disponible en GitHub para su clonación, compilación y uso posterior.\n\nSi has llegado a leer hasta aquí, gracias por perder tu tiempo.</string>

    <string name="cartas_nombreText">Nombre</string>
    <string name="cartas_vidaText">Vida</string>
    <string name="cartas_ataqueText">Ataque</string>
    <string name="cartas_nombreText_hint">Nombre de la carta</string>
    <string name="cartas_vidaText_hint">Vida de la carta</string>
    <string name="cartas_ataqueText_hint">Ataque de la carta</string>
    <string name="cartas_spinner_mazo">Mazo donde añadir la carta</string>
    <string name="cartas_button">Añadir</string>

    <string name="mazos_button">Ajustes de mazo</string>
    <string name="mazos_texto_ver">Puedes ver las cartas de estos mazos:</string>
    <string name="title_activity_insertar_mazo">InsertarMazo</string>

    <string name="insertarMazo_insertar_text">Insertar un mazo</string>
    <string name="insertarMazo_insertar_hint">Nombre del mazo</string>
    <string name="insertarMazo_insertar_button">Insertar</string>

    <string name="insertarMazo_eliminar_text">Seleccione un mazo</string>
    <string name="insertarMazo_eliminar_button">Eliminar</string>

    <string name="insertarMazo_modificar_text">Seleccione para modificar un mazo</string>
    <string name="insertarMazo_modificar_hint">Nuevo nombre</string>
    <string name="insertarMazo_modificar_button">Modificar</string>
    <string name="title_activity_ver_carta">VerCarta</string>

    <string name="ver_carta_titulo">Información sobre la carta:</string>
    <string name="ver_carta_nombre">Nombre:</string>
    <string name="ver_carta_vida">Vida:</string>
    <string name="ver_carta_ataque">Ataque:</string>
    <string name="ver_carta_button">Eliminar</string>
    <string name="title_activity_contactame">ContactameActivity</string>

    <string name="contactame_botona">Enviar</string>
    <string name="contactame_telefono_text">Teléfono:</string>
    <string name="contactame_telefono_hint">Número de teléfono</string>
    <string name="contactame_mensaje_text">Mensaje:</string>
    <string name="contactame_mensaje_hint">Texto del mensaje</string>


</resources>
